not final but maybe good enough

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 </div>
                 
                 <button type="button" onclick="getValueInput()">check</button>
-                <p id="valueInput"><br></p>
+                <p id="valueInput1"><br></p>
+                <p id="valueInput2"><br></p>
             </div>
             <div>
                 <p id="valueResult"><br></p>
@@ -46,8 +47,6 @@
         </footer> 
     </div>
     <script src="script.js"></script>
-    <script src="jquery.js"></script>
-    <script src="database.js"></script>
     
 </body>
 </html>
